Fix mobile and spacing

--- a/src/styles/_theme-toggle.scss
+++ b/src/styles/_theme-toggle.scss
@@ -3,7 +3,6 @@
   align-items: center;
   height: 100%;
   padding: 0.33em 0.67em;
-  padding-top: 8px;
   margin-left: 10px;
   gap: 0.6em;
   border-radius: 99em;
